user sucessfylly loggedIn through hash password

--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^10.0.22",
     "@nestjs/mongoose": "^9.2.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "apollo-server-express": "^3.10.2",
     "bcrypt": "^5.0.1",
     "graphql": "^15.8.0",
     "mongoose": "^6.5.4",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
